belajar class js

--- a/prototypeinheritence.html
+++ b/prototypeinheritence.html
@@ -36,7 +36,10 @@
 
     const manager = new Manager("Nur");
     manager.sayHello("joko");
+    
 
+    console.info(employee);
+    console.info(manager);
 
     </script>
 </body>
